--- a/natty/pom.xml
+++ b/natty/pom.xml
@@ -38,6 +38,7 @@
     <grammar.dir>${basedir}/src/main/antlr3/com/joestelmach/natty/generated</grammar.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <jettyVersion>7.2.0.v20101020</jettyVersion>  
   </properties>
   
   <distributionManagement>
@@ -157,6 +158,26 @@
           </execution> 
         </executions> 
       </plugin> 
+
+      <plugin>
+        <!-- This plugin is needed for the servlet example -->
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jettyVersion}</version>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution><goals><goal>java</goal></goals></execution>
+        </executions>
+        <configuration>
+          <mainClass>com.duffy.NattyDateParserServer</mainClass>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
   
@@ -255,5 +276,17 @@
       <version>3.2</version>
       <scope>test</scope>
     </dependency> 
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jettyVersion}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>1.7.1</version>
+    </dependency>
   </dependencies>
 </project>
