--- a/Duffy/Podfile
+++ b/Duffy/Podfile
@@ -8,9 +8,10 @@
 
 xcodeproj '../Duffy.xcodeproj'
 
-platform :ios, '5.0' 
+platform :ios, '7.0' 
 # Or platform :osx, '10.7'
 pod 'RestKit', '~> 0.20.0'
+#pod 'JDStatusBarNotification', '~> 1.4.7'
 
 # Testing and Search are optional components
 # pod 'RestKit/Testing', '~> 0.20.0'
