Added CocoaLumberjack to log to file we can have people send us for debugging.

--- a/Duffy/Podfile
+++ b/Duffy/Podfile
@@ -9,10 +9,8 @@
 xcodeproj '../Duffy.xcodeproj'
 
 platform :ios, '7.0' 
-# Or platform :osx, '10.7'
+
 pod 'RestKit', '~> 0.20.0'
 pod 'JDStatusBarNotification', '~> 1.4.7'
+pod 'CocoaLumberjack', '~> 1.8.1'
 
-# Testing and Search are optional components
-# pod 'RestKit/Testing', '~> 0.20.0'
-# pod 'RestKit/Search',  '~> 0.20.0'
