Added DFLocationPinger class to upload in background, refactored DFFirstTimeSetup controller to make it easier to add addl steps.

--- a/Duffy/Duffy-Info.plist
+++ b/Duffy/Duffy-Info.plist
@@ -31,13 +31,13 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1576</string>
+	<string>1747</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
-		<string>voip</string>
+		<string>location</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
