--- a/strand/iOS/Strand/Strand/Info.plist
+++ b/strand/iOS/Strand/Strand/Info.plist
@@ -29,6 +29,8 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
-	<array/>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+	</array>
 </dict>
 </plist>
