--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -14,4 +14,4 @@ inhibit_all_warnings!
 pod 'RestKit', '~> 0.20.0'
 pod 'JDStatusBarNotification', '~> 1.4.7'
 pod 'CocoaLumberjack', '~> 1.8.1'
-
+pod 'HockeySDK', '~> 3.5.5'
