--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -15,3 +15,4 @@ pod 'RestKit', '~> 0.20.0'
 pod 'JDStatusBarNotification', '~> 1.4.7'
 pod 'CocoaLumberjack', '~> 1.8.1'
 pod 'HockeySDK', '~> 3.5.5'
+pod 'MMPopLabel', '~> 0.1.1'
