Remove old status bar notifications, add a new one only for upload error.

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -16,3 +16,4 @@ pod 'JDStatusBarNotification', '~> 1.4.7'
 pod 'CocoaLumberjack', '~> 1.8.1'
 pod 'HockeySDK', '~> 3.5.5'
 pod 'MMPopLabel', '~> 0.1.1'
+pod 'CRToast', '~> 0.0.7'
