--- a/peanut/requirements.txt
+++ b/peanut/requirements.txt
@@ -18,6 +18,7 @@ parsedatetime==1.2
 python-dateutil==2.2
 pytz==2012c
 pyzmq==14.1.1
+pysolr==3.2.0
 requests==2.2.1
 scipy==0.12.0
 simplejson==3.3.0
