--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -17,3 +17,4 @@ pod 'CocoaLumberjack', '~> 1.8.1'
 pod 'HockeySDK', '~> 3.5.5'
 pod 'MMPopLabel', '~> 0.1.1'
 pod 'CRToast', '~> 0.0.7'
+pod 'Localytics-iOS-Client', '~> 2.23.0'
