Add settings view with support for reporting issues etc.

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -18,3 +18,4 @@ pod 'HockeySDK', '~> 3.5.5'
 pod 'MMPopLabel', '~> 0.1.1'
 pod 'CRToast', '~> 0.0.7'
 pod 'Localytics-iOS-Client', '~> 2.23.0'
+pod 'FormKit.m', '~> 0.4.0'
