--- a/strand/iOS/Strand/Strand/Info.plist
+++ b/strand/iOS/Strand/Strand/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.duffyapp.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.duffyapp.${PRODUCT_NAME:rfc1034identifier}Enterprise</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2203</string>
+	<string>2208</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIBackgroundModes</key>
