Update to hbridge version of MMPopLabel

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -15,7 +15,7 @@ pod 'RestKit', '~> 0.20.0'
 pod 'JDStatusBarNotification', '~> 1.4.7'
 pod 'CocoaLumberjack', '~> 1.8.1'
 pod 'HockeySDK', '~> 3.5.5'
-pod 'MMPopLabel', '~> 0.1.1'
+pod 'MMPopLabel', :git => 'https://github.com/hbridge/MMPopLabel.git'
 pod 'CRToast', '~> 0.0.7'
 pod 'Localytics-iOS-Client', '~> 2.23.0'
 pod 'FormKit.m', '~> 0.4.0'
