Add first run experience.

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -19,3 +19,4 @@ pod 'MMPopLabel', :git => 'https://github.com/hbridge/MMPopLabel.git'
 pod 'CRToast', '~> 0.0.7'
 pod 'Localytics-iOS-Client', '~> 2.23.0'
 pod 'FormKit.m', '~> 0.4.0'
+pod 'SAMGradientView', '~> 0.2.1'
