Add a locked cell.  Not blurred out yet.

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -20,3 +20,4 @@ pod 'CRToast', '~> 0.0.7'
 pod 'Localytics-iOS-Client', '~> 2.23.0'
 pod 'FormKit.m', '~> 0.4.0'
 pod 'SAMGradientView', '~> 0.2.1'
+pod 'GPUImage', '~> 0.1.4'
