Change gallery icon and add badge

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -21,3 +21,4 @@ pod 'Localytics-iOS-Client', '~> 2.23.0'
 pod 'FormKit.m', '~> 0.4.0'
 pod 'SAMGradientView', '~> 0.2.1'
 pod 'GPUImage', '~> 0.1.4'
+pod 'LKbadgeView', '~> 1.1.0'
