--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -22,3 +22,4 @@ pod 'FormKit.m', '~> 0.4.0'
 pod 'SAMGradientView', '~> 0.2.1'
 pod 'LKbadgeView', '~> 1.1.0'
 pod 'LiveFrost', '~> 1.1.2'
+pod 'WYPopoverController', '~> 0.2.2'
