--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -23,3 +23,4 @@ pod 'SAMGradientView', '~> 0.2.1'
 pod 'LKbadgeView', '~> 1.1.0'
 pod 'LiveFrost', '~> 1.1.2'
 pod 'WYPopoverController', '~> 0.2.2'
+pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
