New invite flow, new provisioning profiles

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -24,3 +24,4 @@ pod 'LKbadgeView', '~> 1.1.0'
 pod 'LiveFrost', '~> 1.1.2'
 pod 'WYPopoverController', '~> 0.2.2'
 pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
+pod 'RHAddressBook', '~> 1.1.1'
