UI for adding people to strand at create time

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -25,3 +25,4 @@ pod 'LiveFrost', '~> 1.1.2'
 pod 'WYPopoverController', '~> 0.2.2'
 pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
 pod 'RHAddressBook', '~> 1.1.1'
+pod 'VENTokenField', '~> 2.0'
