Send invites via SMS if the user isn't a strand user

--- a/strand/iOS/Strand/Strand/Beta.xcconfig
+++ b/strand/iOS/Strand/Strand/Beta.xcconfig
@@ -9,3 +9,4 @@
 EMPTY_STRING =
 APP_BUNDLE_DISPLAY_NAME_SUFFIX = $(EMPTY_STRING) Beta
 APP_BUNDLE_ID_SUFFIX = Enterprise
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) BETA=1
