--- a/strand/iOS/Strand/Strand/Info.plist
+++ b/strand/iOS/Strand/Strand/Info.plist
@@ -40,6 +40,8 @@
 	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
