--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -28,3 +28,4 @@ pod 'WYPopoverController', '~> 0.2.2'
 pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
 pod 'RHAddressBook', '~> 1.1.1'
 pod 'VENTokenField', '~> 2.0'
+pod 'MCSwipeTableViewCell', '~> 2.1.2'
