Add seen state for friend tab strand suggestions

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -29,3 +29,4 @@ pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
 pod 'RHAddressBook', '~> 1.1.1'
 pod 'VENTokenField', '~> 2.0'
 pod 'MCSwipeTableViewCell', '~> 2.1.2'
+pod 'FMDB/FTS', '~> 2.4'
