--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -28,3 +28,4 @@ pod 'SVProgressHUD', :git => 'https://github.com/samvermette/SVProgressHUD.git'
 pod 'RHAddressBook', '~> 1.1.1'
 pod 'MCSwipeTableViewCell', '~> 2.1.2'
 pod 'FMDB/FTS', '~> 2.4'
+pod 'Slash', '~> 0.1.2'
