--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -29,3 +29,4 @@ pod 'RHAddressBook', '~> 1.1.1'
 pod 'MCSwipeTableViewCell', '~> 2.1.2'
 pod 'FMDB/FTS', '~> 2.4'
 pod 'Slash', '~> 0.1.2'
+pod 'UIColor+BFPaperColors', '~> 1.3.1'
