--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -30,3 +30,4 @@ pod 'MCSwipeTableViewCell', '~> 2.1.2'
 pod 'FMDB/FTS', '~> 2.4'
 pod 'Slash', '~> 0.1.2'
 pod 'UIColor+BFPaperColors', '~> 1.3.1'
+pod 'GBFlatButton', '~> 2.0.0'
