Swap out RK for EasyMapping for feed processing
Add support for EasyMapping parallel to RK
move around some constants
add support for unix timezone dates for EM

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -31,3 +31,4 @@ pod 'FMDB/FTS', '~> 2.4'
 pod 'Slash', '~> 0.1.2'
 pod 'UIColor+BFPaperColors', '~> 1.3.1'
 pod 'GBFlatButton', '~> 2.1.0'
+pod 'EasyMapping', '~> 0.12.0'
