--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -32,3 +32,4 @@ pod 'Slash', '~> 0.1.2'
 pod 'UIColor+BFPaperColors', '~> 1.3.1'
 pod 'GBFlatButton', '~> 2.1.0'
 pod 'EasyMapping', '~> 0.12.0'
+pod 'RequestUtils', '~> 1.1'
