--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -20,7 +20,7 @@ pod 'HockeySDK', :git => 'https://github.com/bitstadium/HockeySDK-iOS.git'
 pod 'MMPopLabel', :git => 'https://github.com/hbridge/MMPopLabel.git'
 pod 'CRToast', '~> 0.0.7'
 pod 'Localytics-iOS-Client', '~> 2.23.0'
-pod 'FormKit.m', '~> 0.4.0'
+pod 'FormKit.m', :git => 'https://github.com/hbridge/FormKit.m.git'
 pod 'SAMGradientView', '~> 0.2.1'
 pod 'LKbadgeView', '~> 1.1.0'
 pod 'WYPopoverController', '~> 0.2.2'
@@ -33,3 +33,5 @@ pod 'UIColor+BFPaperColors', '~> 1.3.1'
 pod 'GBFlatButton', '~> 2.1.0'
 pod 'EasyMapping', '~> 0.12.0'
 pod 'RequestUtils', '~> 1.1'
+pod 'libPhoneNumber-iOS', '~> 0.8.1'
+pod 'ActionSheetPicker-3.0', '~> 1.3.12'
