Update to Localytics 3 SDK

--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -19,7 +19,7 @@ pod 'CocoaLumberjack', '~> 1.8.1'
 pod 'HockeySDK', :git => 'https://github.com/bitstadium/HockeySDK-iOS.git'
 pod 'MMPopLabel', :git => 'https://github.com/hbridge/MMPopLabel.git'
 pod 'CRToast', '~> 0.0.7'
-pod 'Localytics-iOS-Client', '~> 2.23'
+pod 'Localytics', '~> 3.0'
 pod 'FormKit.m', :git => 'https://github.com/hbridge/FormKit.m.git'
 pod 'SAMGradientView', '~> 0.2.1'
 pod 'LKbadgeView', '~> 1.1.0'
