--- a/strand/iOS/Strand/Podfile
+++ b/strand/iOS/Strand/Podfile
@@ -35,3 +35,4 @@ pod 'EasyMapping', '~> 0.12.0'
 pod 'RequestUtils', '~> 1.1'
 pod 'libPhoneNumber-iOS', '~> 0.8'
 pod 'ActionSheetPicker-3.0', '~> 1.3'
+pod 'Facebook-iOS-SDK', '~> 3.2'
