--- a/natty/pom.xml
+++ b/natty/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.joestelmach</groupId>
   <artifactId>natty</artifactId>
   <packaging>jar</packaging>
-  <version>0.8</version>
+  <version>0.11-SNAPSHOT</version>
   <name>Natty Date Parser</name>
   <description>natural language date parser</description>
   <url>http://natty.joestelmach.com</url>
@@ -38,20 +38,20 @@
     <grammar.dir>${basedir}/src/main/antlr3/com/joestelmach/natty/generated</grammar.dir>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jettyVersion>7.2.0.v20101020</jettyVersion>  
+    <jettyVersion>7.2.0.v20101020</jettyVersion>
   </properties>
   
   <distributionManagement>
     <snapshotRepository>
       <id>sonatype-nexus-snapshots</id>
       <name>Sonatype Nexus Snapshots</name>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     
     <repository>
       <id>sonatype-nexus-staging</id>
       <name>Nexus Release Repository</name>
-      <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
     </repository>
   </distributionManagement>
   
@@ -73,8 +73,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.6</source>
+          <target>1.6</target>
         </configuration>
       </plugin>
       
@@ -99,7 +99,7 @@
       <plugin>
         <groupId>org.antlr</groupId>
         <artifactId>antlr3-maven-plugin</artifactId>
-        <version>3.2</version>
+        <version>3.5.2</version>
         
         <executions>
           <execution>
@@ -111,7 +111,6 @@
               <debug>true</debug>
               <libDirectory>src/main/antlr3/com/joestelmach/natty/generated/imports</libDirectory>
               <outputDirectory>src/main/java</outputDirectory>
-              <conversionTimeout>10000</conversionTimeout>
               <includes>
                 <include>com/joestelmach/natty/generated/DateLexer.g</include> 
                 <include>com/joestelmach/natty/generated/DateParser.g</include> 
@@ -131,7 +130,6 @@
               <debug>false</debug>
               <outputDirectory>src/main/java</outputDirectory>
               <libDirectory>src/main/antlr3/com/joestelmach/natty/generated/imports</libDirectory>
-              <conversionTimeout>10000</conversionTimeout>
               <excludes>
                 <exclude>com/joestelmach/natty/generated/DateLexer.g</exclude> 
                 <exclude>com/joestelmach/natty/generated/DateParser.g</exclude> 
@@ -147,7 +145,7 @@
       <plugin> 
         <groupId>org.antlr</groupId> 
         <artifactId>maven-gunit-plugin</artifactId> 
-        <version>3.2</version> 
+        <version>3.5.2</version>
         <executions> 
           <execution> 
             <id>maven-gunit-plugin</id> 
@@ -165,7 +163,7 @@
         <artifactId>jetty-maven-plugin</artifactId>
         <version>${jettyVersion}</version>
       </plugin>
-      
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -198,6 +196,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.4</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -213,6 +212,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.9.1</version>
             <executions>
               <execution>
                 <id>attach-javadocs</id>
@@ -229,6 +229,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
+            <version>2.2.1</version>
             <executions>
               <execution>
                 <id>attach-sources</id>
@@ -248,19 +249,26 @@
     <dependency> 
       <groupId>org.antlr</groupId>
       <artifactId>antlr-runtime</artifactId>
-      <version>3.2</version>
-    </dependency> 
-    
-    <dependency> 
-      <groupId>antlr</groupId>
-      <artifactId>antlr</artifactId>
-      <version>2.7.7</version>
+      <version>3.5.2</version>
     </dependency> 
     
     <dependency>
       <groupId>org.mnode.ical4j</groupId>
       <artifactId>ical4j</artifactId>
       <version>1.0.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.10</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.10</version>
+      <scope>test</scope>
     </dependency>
     
     <dependency>
@@ -273,20 +281,21 @@
     <dependency> 
       <groupId>org.antlr</groupId>
       <artifactId>gunit</artifactId>
-      <version>3.2</version>
+      <version>3.5.2</version>
       <scope>test</scope>
     </dependency> 
 
-    <dependency>
+     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
       <version>${jettyVersion}</version>
-    </dependency>
+     </dependency>
 
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>1.7.1</version>
     </dependency>
+
   </dependencies>
 </project>
